--- a/UMAP/UMAP.Rmd
+++ b/UMAP/UMAP.Rmd
@@ -49,28 +49,41 @@ ggsave("plots/UMAP_ATAC.png")
 ### RNA
 
 ```{r}
-RNA_expression_matrix <- readRDS("../data/RNA-Seq-filtered.rds")
+RNA_expression_matrix <- readRDS("../data/pre_processed/RNA-Seq-filtered.rds")
 ```
 
 ```{r}
-RNA_annnotations <- read_csv("../data/RNA_annotations.csv")
+RNA_annotations <- read_csv("../data/pre_processed/RNA_annotations.csv")
 ```
-
-
 ```{r}
-umap <- umap(t(RNA_expression_matrix))
+DEG <- read_csv("../DESeq/genes_by_sig.csv")
 ```
-
-
-
 ```{r}
-RNA_umap <- as_tibble(umap_1 = umap$layout[,1], 
-                      umap_2 = umap$layout[,2], 
-                      Celltype = RNA_annotations$Sub_trajectory_name)
+DEG <- DEG %>% 
+  filter(padj <= 0.05) %>%
+  distinct(gene, keep_all = TRUE) %>%
+  head(200)
 ```
 
 ```{r}
-ggplot(ATAC_umap, aes(x = umap_1, y = umap_2, color = Celltype)) +
+RNA_expression_matrix <- RNA_expression_matrix[DEG$gene,]
+```
+
+```{r}
+custom.config <- umap.defaults
+#custom.config$n_neighbors <- 5
+#custom.config$min_dist <- 0.5
+umap <- umap(t(RNA_expression_matrix), config = custom.config)
+```
+
+```{r}
+RNA_umap <- tibble(umap_1 = umap$layout[,1], 
+                   umap_2 = umap$layout[,2], 
+                   Celltype = RNA_annotations$Sub_trajectory_name)
+```
+
+```{r}
+ggplot(RNA_umap, aes(x = umap_1, y = umap_2, color = Celltype)) +
   geom_point()
 ggsave("plots/UMAP_RNA.png")
 ```
