--- a/UMAP/UMAP.Rmd
+++ b/UMAP/UMAP.Rmd
@@ -62,7 +62,7 @@ DEG <- read_csv("../DESeq/genes_by_sig.csv")
 DEG <- DEG %>% 
   filter(padj <= 0.05) %>%
   distinct(gene, keep_all = TRUE) %>%
-  head(200)
+  head(100)
 ```
 
 ```{r}
@@ -85,6 +85,6 @@ RNA_umap <- tibble(umap_1 = umap$layout[,1],
 ```{r}
 ggplot(RNA_umap, aes(x = umap_1, y = umap_2, color = Celltype)) +
   geom_point()
-ggsave("plots/UMAP_RNA.png")
+ggsave("plots/UMAP_RNA_100.png")
 ```
 
