--- a/Neural_Network/Neural_Network.ipynb
+++ b/Neural_Network/Neural_Network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay, accuracy_score\n",
+    "from captum.attr import IntegratedGradients\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Building The Network"
    ]
   },
   {
@@ -84,8 +92,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,6 +140,13 @@
     "\n",
     "data_loader_train = DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
     "data_loader_test = DataLoader(test_dataset, batch_size=64, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training"
    ]
   },
   {
@@ -461,6 +483,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -501,6 +530,215 @@
     "disp.plot()\n",
     "plt.savefig(\"conf_mat_RNA_200.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interpretability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.000e+00 0.000e+00 0.000e+00 0.000e+00 5.300e+01 0.000e+00 0.000e+00\n",
+      "  1.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 3.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 7.200e+01 0.000e+00 8.120e+02\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 4.000e+00 1.000e+00\n",
+      "  0.000e+00 1.230e+02 3.000e+00 1.000e+00 2.000e+00 7.300e+01 2.000e+02\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 4.800e+01 0.000e+00 4.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 1.700e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00 3.000e+00 0.000e+00\n",
+      "  0.000e+00 4.800e+01 0.000e+00 0.000e+00 1.700e+01 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.700e+01 0.000e+00 1.400e+01 5.000e+01 3.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 4.700e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  1.750e+03 0.000e+00 1.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 2.000e+00 0.000e+00 0.000e+00 0.000e+00 3.430e+02 0.000e+00\n",
+      "  2.000e+00 5.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.980e+02\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.690e+02 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+01 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.000e+00 0.000e+00 2.670e+02 1.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 6.000e+00 0.000e+00 0.000e+00 3.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 6.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 4.000e+00 9.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 7.300e+01 4.900e+01 0.000e+00 7.000e+01 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 5.450e+02 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.500e+01 0.000e+00 0.000e+00]\n",
+      " [1.900e+01 6.200e+01 1.000e+00 0.000e+00 0.000e+00 2.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 2.500e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00 3.000e+00\n",
+      "  0.000e+00 8.100e+01 1.010e+02 0.000e+00 3.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  3.100e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 3.800e+01 0.000e+00 3.000e+00\n",
+      "  2.900e+01 4.100e+01 0.000e+00 3.300e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 6.000e+00 4.000e+01 9.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00\n",
+      "  1.000e+00 0.000e+00 0.000e+00 0.000e+00 3.360e+02 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.320e+02 0.000e+00\n",
+      "  0.000e+00 0.000e+00 3.900e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 5.200e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  2.160e+02 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00\n",
+      "  3.000e+00 1.800e+01 0.000e+00 0.000e+00 0.000e+00 1.200e+01 1.000e+00\n",
+      "  1.800e+01 5.900e+01 0.000e+00 8.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00 2.600e+01 0.000e+00\n",
+      "  4.200e+01 2.000e+00 0.000e+00 3.000e+00 1.300e+01 8.300e+01 3.000e+00\n",
+      "  1.700e+02 0.000e+00 1.400e+01 2.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.100e+01 1.480e+02\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  1.500e+01 2.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 3.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  3.700e+01 3.400e+01 6.700e+01 0.000e+00 0.000e+00 0.000e+00 3.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.400e+01]\n",
+      " [3.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  2.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.300e+01 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 4.100e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 4.800e+01 1.130e+02\n",
+      "  1.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 7.800e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 2.000e+00 0.000e+00 0.000e+00 0.000e+00 7.600e+01\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 7.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 4.800e+01 0.000e+00 1.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+01 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 4.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 1.000e+00 0.000e+00 0.000e+00 6.700e+01 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00\n",
+      "  1.220e+02 0.000e+00 0.000e+00 3.863e+03]\n",
+      " [7.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 2.000e+00 9.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 4.000e+01 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 3.600e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 4.600e+01 2.700e+01 2.800e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 3.200e+01 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.600e+01\n",
+      "  1.800e+01 2.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  3.000e+00 0.000e+00 8.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.000e+00\n",
+      "  2.000e+00 0.000e+00 0.000e+00 0.000e+00 3.000e+00 0.000e+00 7.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 2.000e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 2.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 1.000e+01 0.000e+00 0.000e+00 0.000e+00 3.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 1.200e+01 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 1.100e+01 4.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00 0.000e+00\n",
+      "  0.000e+00 0.000e+00 0.000e+00 9.000e+00]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "net = torch.load(\"saved_net.py\").cpu()\n",
+    "ig = IntegratedGradients(net)\n",
+    "net.eval()\n",
+    "res = np.zeros((4, 200))\n",
+    "\n",
+    "for input, target in test_dataset:\n",
+    "    input = input.unsqueeze(0)\n",
+    "    target = torch.argmax(target).unsqueeze(0)\n",
+    "    attributions, delta = ig.attribute(input, target = target, return_convergence_delta=True)\n",
+    "    res[target, torch.argmax(attributions)] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[177.  36.  27. 111.  41. 130. 185. 143.  91. 103.]\n",
+      " [  1. 191.  22. 152.  23.  96.  88. 112. 154. 167.]\n",
+      " [ 39.  57. 132. 179. 157.  75. 122. 196.  76. 199.]\n",
+      " [164.  62.  63.  31.  43.  29.  24.  19. 115.  30.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "top_10 = np.zeros((4, 10))\n",
+    "\n",
+    "for i in range(4):\n",
+    "    ind = np.argpartition(res[i], -10)[-10:]\n",
+    "    top_10[i] = ind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genes = pd.read_csv(\"../DESeq/genes_by_sig_unique.csv\")\n",
+    "gene_annotations = pd.read_csv(\"../data/unprocessed/gene_annotate.csv\")\n",
+    "\n",
+    "important_genes = pd.DataFrame({\"gene_id\": [],\n",
+    "                               \"gene_name\": [],\n",
+    "                               \"class\" : []})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(10):\n",
+    "        gene_id = genes.loc[top_10[i,j], \"gene\"]\n",
+    "        gene_name = gene_annotations.loc[gene_annotations[\"gene_id\"] == gene_id, \"gene_short_name\"].item()\n",
+    "        clas = uniques[i]\n",
+    "        important_genes.loc[len(important_genes.index)] = [gene_id, gene_name, clas]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "important_genes.to_csv(\"important_genes.csv\")"
    ]
   }
  ],
