cleaned repo, commented code and added readme

--- a/DESeq/DESeq_ATAC.Rmd
+++ b/DESeq/DESeq_ATAC.Rmd
@@ -17,26 +17,29 @@ library(BiocParallel)
 register(SnowParam(4))
 ```
 
-
+# Load expression matrix and annotations
 ```{r}
 ATAC_expression_matrix <- readRDS("../data/pre_processed/ATAC-Seq-filtered.rds")
-ATAC_expression_matrix <- ATAC_expression_matrix + 1
+ATAC_expression_matrix <- ATAC_expression_matrix + 1 # pseudocount
 ```
 
 ```{r}
 ATAC_annotations <- read_csv("../data/pre_processed/ATAC_annotations.csv",show_col_types = FALSE)
 ```
 
+# create DESeq2 object from expression matrix with design by sub trajectory
 ```{r}
 dds <- DESeqDataSetFromMatrix(countData = ATAC_expression_matrix,
                               colData = select(ATAC_annotations, Barcode, Trajectory),
                               design = ~ Trajectory)
 ```
 
+# perfrom differential gene expression analysis
 ```{r}
 dea <- DESeq(dds, parallel = TRUE)
 ```
 
+# save results related to two trajectory for MA Plot
 ```{r}
 results <- results(dea, contrast = c("Sub_trajectory_name", 
                                      "Definitive erythroid trajectory", 
@@ -51,6 +54,7 @@ plotMA(results)
 Sub_traj <- distinct(ATAC_annotations, Trajectory)$Trajectory
 ```
 
+# save results for all combinations of all sub trajectories 
 ```{r}
 res_list <- list()
 for(i in 1:(length(Sub_traj)-1)){
@@ -77,6 +81,7 @@ combined_res <- combined_res[order(combined_res$padj),]
 write_csv(combined_res, "genes_by_sig_ATAC.csv")
 ```
 
+# keep only the significant genes and each gene only once
 ```{r}
 combined_res <- combined_res %>% 
   filter(padj <= 0.05) %>%
