--- a/Neural_Network/plot_learning_curves.ipynb
+++ b/Neural_Network/plot_learning_curves.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_RNA = np.load(\"Learning_Curves_RNA_subset.npz\")\n",
-    "data_ATAC = np.load(\"Learning_Curves_ATAC.npz\")"
+    "data_RNA = np.load(\"learning_curves/Learning_Curves_RNA_subset.npz\")\n",
+    "data_ATAC = np.load(\"learning_curves/Learning_Curves_ATAC.npz\")"
    ]
   },
   {
@@ -55,7 +55,7 @@
     "plt.ylim([0, 0.15])\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig(\"Learning_Curves.png\")"
+    "plt.savefig(\"plots/Learning_Curves.png\")"
    ]
   }
  ],
