--- a/data_preprocessing/get_ATAC_matrix.Rmd
+++ b/data_preprocessing/get_ATAC_matrix.Rmd
@@ -18,30 +18,33 @@ library(AnnotationDbi)
 library(org.Mm.eg.db)
 library(tidyverse)
 ```
+# do not attemt to run with less than 90GB of RAM
 
-
+# define path to fragment files (not included in git)
 ```{r}
 path = "../data/unprocessed/atac_organ_fragments/"
 files <- read.table(paste(path, "md5.txt", sep = ""))$V2
 ```
 
+# Load gene information
 ```{r}
 genes <- genes(TxDb.Mmusculus.UCSC.mm10.knownGene)
 ```
 
 
 ```{r}
-total_df <- tibble("gene_symbol" = character())
-
 for(file in files){
+  #read file
   fragments <- read.delim(paste(path, file, sep = ""), header = FALSE)
   
+  #transform into GRanges
   atac_Granges <- GRanges(seqnames = atac_data$V1,
                         ranges = IRanges(start = atac_data$V2, 
                                          end = atac_data$V3),
                         sample = atac_data$V4)
   rm(fragments)
   
+  # calculate nearest genes
   nearest_genes <- nearest(atac_Granges, genes)
   atac_Granges$gene_id <- mcols(genes)$gene_id[nearest_genes]
 
@@ -51,28 +54,23 @@ for(file in files){
                         column = "SYMBOL",
                         keytype = "ENTREZID",
                         multiVals = "first")
-
+  
+  # add genes to GRanges object
   atac_Granges$gene_symbol <- gene_symbols
 
   atac_df <- as.data.frame(atac_Granges)
-
+  
+  # calculate counts
   atac_df <- atac_df %>%
     group_by(gene_symbol, sample) %>%
     summarise(count = n()) %>%
     ungroup()
   
+  # Transform into count matrix
   atac_df <- pivot_wider(atac_df, names_from = sample, values_from = count, values_fill = list(count = 0))
   atac_df <- column_to_rownames(atac_df, var = "gene_symbol")
 
-  total_df <- full_join(total_df, atac_df) %>% replace(is.na(.), 0)
+  saveRDS(as(atac_df, "sparseMatrix"), 
+          paste("..data/unprocessed/atac_organ_counts/ATAC_counts", file, ".rds", sep = ""))
 }
 ```
-
-```{r}
-saveRDS(as(total_df, "sparseMatrix"), "..data/unprocessed/ATAC_counts.rds")
-```
-
-
-
-
-
